--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 				<img src="r.png">
 			</div>
 			<div class="img">
-				<img src="_MG_3015.png">
+				<img src="MG3015.png">
 			</div>
 			<div class="img">
 				<img src="p.png">
