--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 		</table><br><br>
 		<div class="social_icon">
 			<a href="https://www.facebook.com/"><img src="md_5a9794da1b10e.png"></a>
-			<a href=""><img src="twitter.png"></a>
+			<a href=""><img src="Twitter.png"></a>
 			<a href=""><img src="887422_watch_512x512.png"></a>
 			<a href=""><img src="images.png"></a>
 
